更新缓存方法

--- a/src/main/resources/templates/test.html
+++ b/src/main/resources/templates/test.html
@@ -5,6 +5,9 @@
     <title>Title</title>
 </head>
 <body>
-<span th:text="${id}"></span>
+<span th:text="${name1}"></span><br>
+<span th:text="${name2}"></span><br>
+<span th:text="${name3}"></span><br>
+<span th:text="${name4}"></span><br>
 </body>
 </html>
