--- a/src/main/resources/templates/xinzidengjii.html
+++ b/src/main/resources/templates/xinzidengjii.html
@@ -74,34 +74,34 @@
                     	</li>
                     	<li>
                     		<div class="form-group">
-                        <label class="control-label col-md-3 col-sm-3 col-xs-12" for="middle-name">薪酬总额</label>
+                        <label class="control-label col-md-3 col-sm-3 col-xs-12" >薪酬总额</label>
                         <div class="col-md-6 col-sm-6 col-xs-12">
-                          <input name="middle-name" class="form-control col-md-7 col-xs-12" id="middle-name" type="text">
+                          <input name="middle-name" class="form-control col-md-7 col-xs-12" id="middle-name1" type="text">
                         </div>
                       </div>
                     		
                    </li>
                     	<li>
                     		<div class="form-group">
-                        <label class="control-label col-md-3 col-sm-3 col-xs-12" for="middle-name">制定人</label>
+                        <label class="control-label col-md-3 col-sm-3 col-xs-12" >制定人</label>
                         <div class="col-md-6 col-sm-6 col-xs-12">
-                          <input name="middle-name" class="form-control col-md-7 col-xs-12" id="middle-name" type="text">
+                          <input name="middle-name" class="form-control col-md-7 col-xs-12" id="middle-name2" type="text">
                         </div>
                       </div>
                     		
                    </li>
                     	<li>
                     		<div class="form-group">
-                        <label class="control-label col-md-3 col-sm-3 col-xs-12" for="middle-name">登记人</label>
+                        <label class="control-label col-md-3 col-sm-3 col-xs-12" >登记人</label>
                         <div class="col-md-6 col-sm-6 col-xs-12">
-                          <input name="middle-name" class="form-control col-md-7 col-xs-12" id="middle-name" type="text">
+                          <input name="middle-name" class="form-control col-md-7 col-xs-12" id="middle-name3" type="text">
                         </div>
                       </div>
                   		
                     </li>
                     	<li>
                     	<div class="form-group">
-                        <label class="control-label col-md-3 col-sm-3 col-xs-12" for="creatTime">登记日期:</label>
+                        <label class="control-label col-md-3 col-sm-3 col-xs-12" >登记日期:</label>
                         <div class="col-md-6 col-sm-6 col-xs-12">
                         <fieldset>
                           <div class="control-group">
@@ -130,42 +130,42 @@
                       <tr role="row" class="odd">
                           <td class="sorting_1"><font style="vertical-align: inherit;"><font style="vertical-align: inherit;">1</font></font></td>
                           <td><font style="vertical-align: inherit;"><font style="vertical-align: inherit;">基本工资</font></font></td>                       
-                          <td><input name="last-name"   id="last-name" required="required"  type="text"></td>
+                          <td><input name="last-name"   id="last-name1" required="required"  type="text"></td>
                     
                         </tr><tr role="row" class="even">
                           <td class="sorting_1"><font style="vertical-align: inherit;"><font style="vertical-align: inherit;">2</font></font></td>
                           <td><font style="vertical-align: inherit;"><font style="vertical-align: inherit;">绩效奖金</font></font></td>
-                          <td><input name="last-name"  id="last-name" required="required" type="text"></td>
+                          <td><input name="last-name"  id="last-name2" required="required" type="text"></td>
                           
                         </tr><tr role="row" class="odd">
                           <td class="sorting_1"><font style="vertical-align: inherit;"><font style="vertical-align: inherit;">3</font></font></td>
                           <td><font style="vertical-align: inherit;"><font style="vertical-align: inherit;">交通补助</font></font></td>                          
-                          <td><input name="last-name"  id="last-name" required="required" type="text"></td>
+                          <td><input name="last-name"  id="last-name3" required="required" type="text"></td>
                         
                         <tr role="row" class="odd">
                           <td class="sorting_1"><font style="vertical-align: inherit;"><font style="vertical-align: inherit;">4</font></font></td>
                           <td><font style="vertical-align: inherit;"><font style="vertical-align: inherit;">通讯补助</font></font></td>                       
-                          <td><input name="last-name"  id="last-name" required="required" type="text"></td>
+                          <td><input name="last-name"  id="last-name4" required="required" type="text"></td>
                          
                         </tr><tr role="row" class="even">
                           <td class="sorting_1"><font style="vertical-align: inherit;"><font style="vertical-align: inherit;">5</font></font></td>
                           <td><font style="vertical-align: inherit;"><font style="vertical-align: inherit;">餐补</font></font></td>
-                          <td><input name="last-name"  id="last-name" required="required" type="text"></td>
+                          <td><input name="last-name"  id="last-name5" required="required" type="text"></td>
                           
                         </tr><tr role="row" class="odd">
                           <td class="sorting_1"><font style="vertical-align: inherit;"><font style="vertical-align: inherit;">6</font></font></td>
                           <td><font style="vertical-align: inherit;"><font style="vertical-align: inherit;">住房补助</font></font></td>                          
-                          <td><input name="last-name"  id="last-name" required="required" type="text"></td>
+                          <td><input name="last-name"  id="last-name6" required="required" type="text"></td>
                         
                         <tr role="row" class="odd">
                           <td class="sorting_1"><font style="vertical-align: inherit;"><font style="vertical-align: inherit;">7</font></font></td>
                           <td><font style="vertical-align: inherit;"><font style="vertical-align: inherit;">出差补助</font></font></td>                       
-                          <td><input name="last-name"  id="last-name" required="required" type="text"></td>
+                          <td><input name="last-name"  id="last-name7" required="required" type="text"></td>
                          
                         </tr><tr role="row" class="even">
                           <td class="sorting_1"><font style="vertical-align: inherit;"><font style="vertical-align: inherit;">8</font></font></td>
                           <td><font style="vertical-align: inherit;"><font style="vertical-align: inherit;">加班补助</font></font></td>
-                          <td><input name="last-name"   id="last-name" required="required" type="text"></td>
+                          <td><input name="last-name"   id="last-name8" required="required" type="text"></td>
                                            
                       </tbody>
                     </table>
@@ -516,5 +516,6 @@
       });
     </script>
   	
-	</body>
+        </div>
+    </body>
 </html>
