--- a/src/main/resources/templates/danganbiangeng.html
+++ b/src/main/resources/templates/danganbiangeng.html
@@ -97,7 +97,7 @@
 						<div class="form-group">
 							<label class="control-label col-md-3 col-sm-3 col-xs-12 ">档案状态</label>
 							<div class="col-md-6 col-sm-6 col-xs-12" >
-								<select class="form-control" class="span1">
+								<select class="form-control" >
 									<option>试用期</option>
 									<option>实习</option>
 									<option>正式员工</option>
