--- a/src/main/resources/templates/test.html
+++ b/src/main/resources/templates/test.html
@@ -5,9 +5,41 @@
     <title>Title</title>
 </head>
 <body>
-<span th:text="${name1}"></span><br>
-<span th:text="${name2}"></span><br>
-<span th:text="${name3}"></span><br>
-<span th:text="${name4}"></span><br>
+    <table>
+        <thead>
+            <th>选择</th>
+            <th>序号</th>
+            <th>编号</th>
+            <th>名称</th>
+            <th>描述</th>
+            <th>提交</th>
+        </thead>
+        <tbody>
+        <tr role="row" class="odd" th:each="salaryItem,status:${salaryItemList}">
+            <td>
+                <input type="checkbox" class="flat" name="table_records" style="position: absolute; opacity: 0;">
+            </td>
+            <td class="sorting_1" th:text="${status.count}">
+                <input type="hidden" th:value="${salaryItem.getId()}">
+            </td>
+            <td>
+                <input type="text" th:value="${salaryItem.getItemCode()}">
+            </td>
+            <td>
+                <input type="text" th:value="${salaryItem.getItemName()}">
+            </td>
+            <td>
+                <input type="text" th:value="${salaryItem.getIntroduction()}">
+            </td>
+            <td th:if="${salaryItem.getEnable()}==3">
+                <input type="checkbox"
+                       th:checked="true">
+            </td>
+            <td th:if="${salaryItem.getEnable()}==4">
+                <input type="checkbox">
+            </td>
+        </tr>
+        </tbody>
+    </table>
 </body>
 </html>
