--- a/src/main/resources/templates/test.html
+++ b/src/main/resources/templates/test.html
@@ -3,43 +3,113 @@
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
+    <style type="text/css">
+        table, th, td {
+            border: 1px solid #00243F;
+        }
+    </style>
+    <script th:src="@{/js/jquery.js}"></script>
+    <script>
+        $(document).ready(function () {
+            //
+            var updateArr = new Array();
+            var i = 0;
+            //添加，页面增加新的空行
+            $('#insert').click(function () {
+                var tr = '<tr>\n' +
+                    '            <input type="hidden" name="id" >\n' +
+                    '            <td>\n' +
+                    '                <input type="checkbox">\n' +
+                    '            </td>\n' +
+                    '            <td >\n' +
+                    '            </td>\n' +
+                    '            <td>\n' +
+                    '                <input type="text" name="code" >\n' +
+                    '            </td>\n' +
+                    '            <td>\n' +
+                    '                <input type="text" name="name" >\n' +
+                    '            </td>\n' +
+                    '            <td>\n' +
+                    '                <input type="text" name="intro" >\n' +
+                    '            </td>\n' +
+                    '            <td>\n' +
+                    '                <input type="checkbox" name="enable" value="3">\n' +
+                    '            </td>\n' +
+                    '        </tr>';
+                $(" table").append(tr);
+            });
+            //获取表格的修改状态
+            $(":input").change(function () {
+                var hidden = $(this).parent().parent().children("input").val();
+                if (updateArr.indexOf(hidden) == -1) {
+                    updateArr[i] = hidden;
+                    i++;
+                }
+            });
+            //保存，保存修改和添加的数据
+            $('#save').click(function () {
+                alert($('#saveSalaryItemForm').serialize());
+                $.ajax({
+                    type: "POST",
+                    url: "/saveSalaryItem" ,
+                    contentType:"application/json;charset=utf-8",
+                    data: $('#saveSalaryItemForm').serialize(),
+                    success: function (data) {
+                      if (data == "success")   {
+                          alert(1);
+                      }else {
+                          alert(2);
+                      }
+                    }
+                });
+            });
+            //删除，异步删除，并remove元素
+
+        });
+
+    </script>
 </head>
 <body>
-    <table>
+<button id="save">保存</button>
+<button id="insert">添加</button>
+<button id="delete">删除</button>
+<form name="salaryItemList" id="saveSalaryItemForm">
+    <table id="salaryItemTable">
         <thead>
-            <th>选择</th>
-            <th>序号</th>
-            <th>编号</th>
-            <th>名称</th>
-            <th>描述</th>
-            <th>提交</th>
+        <th>选择</th>
+        <th>序号</th>
+        <th>编号</th>
+        <th>名称</th>
+        <th>描述</th>
+        <th>提交</th>
         </thead>
         <tbody>
-        <tr role="row" class="odd" th:each="salaryItem,status:${salaryItemList}">
+        <tr th:each="salaryItem,status:${salaryItemList}" th:id="${salaryItem.getId()}">
+            <input type="hidden"  th:name="id" th:value="${salaryItem.getId()}">
             <td>
-                <input type="checkbox" class="flat" name="table_records" style="position: absolute; opacity: 0;">
+                <input type="radio" class="si">
             </td>
-            <td class="sorting_1" th:text="${status.count}">
-                <input type="hidden" th:value="${salaryItem.getId()}">
-            </td>
-            <td>
-                <input type="text" th:value="${salaryItem.getItemCode()}">
+            <td th:text="${status.count}">
             </td>
             <td>
-                <input type="text" th:value="${salaryItem.getItemName()}">
+                <input type="text" th:name="itemCode" th:value="${salaryItem.getItemCode()}" class="si">
             </td>
             <td>
-                <input type="text" th:value="${salaryItem.getIntroduction()}">
+                <input type="text" th:name="itemName" th:value="${salaryItem.getItemName()}" class="si">
+            </td>
+            <td>
+                <input type="text" th:name="introduction" th:value="${salaryItem.getIntroduction()}" class="si">
             </td>
             <td th:if="${salaryItem.getEnable()}==3">
-                <input type="checkbox"
-                       th:checked="true">
+                <input type="checkbox" th:name="enable"
+                       checked="checked" value="3" class="si">
             </td>
             <td th:if="${salaryItem.getEnable()}==4">
-                <input type="checkbox">
+                <input type="checkbox" th:name="enable" value="3" class="si">
             </td>
         </tr>
         </tbody>
     </table>
+</form>
 </body>
 </html>
